# comparc-dummy

./: BUILD_INSTRUCTIONS.md  CODE_STATUS.txt  ENV_FIX_NEEDED.md  README.md  STATUS.md  VERIFY_LOGIC.md  output_config2_scene2.ppm  output_config2_scene2_aos.ppm  projectdescription.txt  test_parsing.cpp
aos/src/: main.cpp
common/: CMakeLists.txt
common/include/: camera.hpp  config.hpp  cylinder.hpp  material.hpp  ray.hpp  renderer.hpp  renderer_utils.hpp  scene.hpp  sphere.hpp  vector.hpp
common/src/: camera.cpp  config.cpp  renderer.cpp  renderer_utils.cpp  scene.cpp  vector.cpp
soa/: CMakeLists.txt
soa/include/: renderer_soa.hpp  scene_soa.hpp
soa/src/: main.cpp  renderer_soa.cpp  scene_soa.cpp
utcommon/: CMakeLists.txt  test_config.cpp  test_material.cpp  test_scene.cpp  test_sphere.cpp  test_vector.cpp
